k8s-dev/k8s/base/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  namespace: local
spec:
  selector:
    matchLabels:
      app: api
  replicas: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: ghcr.io/symphonygroup/bg-showcase-api:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: dockerconfigjson-github-com
---
apiVersion: v1
kind: Service
metadata:
  name: api-clusterip
  namespace: local
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
  - name: api
    protocol: TCP
    port: 80
    targetPort: 80
