k8s-dev/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: ingress
  namespace: local
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: local.demo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui-clusterip
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-clusterip
                port:
                  number: 80
